--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 CMakeLists.txt.user
+Examples/Object/object_kitti
 Examples/Monocular/mono_euroc
 Examples/Monocular/mono_kitti
 Examples/Monocular/mono_tum
@@ -22,3 +23,6 @@ build/
 *~
 lib/
 
+cmake-build-debug/
+cmake-build-release/
+.idea/
